--- a/changeLog
+++ b/changeLog
@@ -1,6 +1,9 @@
 Changelog for GEMC
 ==================
 
+7/3/18
+ - fixed case where GEMC_DATA_DIR environment does not exist
+
 6/29/18
  - dc routine fix - using new ccdb table
 
