--- a/changeLog
+++ b/changeLog
@@ -1,6 +1,13 @@
 Changelog for GEMC
 ==================
 
+11/26/18
+- (R. DeVita) change htcc time offset table to use the same used in reconstruction
+- (C. Smith, DeVita)reading ecal effective velocity from CCDB
+
+11/9/18
+- fix bugs in linear interpolation in cartesian_3d (Z. Zhao)
+
 10/25/18
  - checking FIELD_DIR enviromnment variable if not set in the option
 
